Created Sqlite Database

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TicketTierContext": "Data Source=TicketTierContext-fca7fe56-4920-4aa2-8d72-dfbbf610ddae.db"
+  }
 }
